[gd_scene load_steps=8 format=3 uid="uid://sr3vpk63ovfn"]

[ext_resource type="Script" uid="uid://dbj4bu62lefqy" path="res://Scripts/SceneControllers/MainScreen.gd" id="1_r150o"]
[ext_resource type="Theme" uid="uid://bbdjky584xraq" path="res://Theme.tres" id="2_idj7w"]
[ext_resource type="Script" uid="uid://cvm2vknptglr3" path="res://Scripts/SceneControllers/stats.gd" id="4_rgh2o"]

[sub_resource type="LabelSettings" id="LabelSettings_uu6xs"]
font_size = 48
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rxg2q"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_glv2v"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kln2b"]
bg_color = Color(0.19215687, 0.39607844, 0.79607844, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r150o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 68)
layout_mode = 2
color = Color(0.18039216, 0.38039216, 0.77254903, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
stretch_mode = 5

[node name="Streak" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0 Days"
label_settings = SubResource("LabelSettings_uu6xs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DueLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Due Tasks"
label_settings = SubResource("LabelSettings_rxg2q")

[node name="DueList" type="ItemList" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_idj7w")
auto_height = true
item_count = 2
item_0/text = "Placeholder"
item_1/text = "Please actually load dynamically"

[node name="CompleteLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Completed Tasks"
label_settings = SubResource("LabelSettings_glv2v")

[node name="CompleteList" type="ItemList" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_idj7w")
auto_height = true
item_count = 5
item_0/text = "Placeholder"
item_1/text = "Please actually load dynamically"
item_2/text = "Eat food"
item_3/text = "Go for a walk"
item_4/text = "Placeholders"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 0
alignment = 1

[node name="AddTask" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_idj7w")
text = "Add Task"

[node name="Shop" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_idj7w")
text = "Hatpedia"

[node name="Stats" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_idj7w")
text = "Stats"
script = ExtResource("4_rgh2o")

[node name="TaskD" type="CanvasLayer" parent="."]

[node name="Transperancy" type="ColorRect" parent="TaskD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.63529414)

[node name="Panel" type="Panel" parent="TaskD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 59.0
offset_right = -40.0
offset_bottom = -64.7785
grow_horizontal = 2
grow_vertical = 2

[node name="Panel3" type="Panel" parent="TaskD"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -228.0
offset_right = -52.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kln2b")

[node name="Panel2" type="Panel" parent="TaskD"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -111.0
offset_right = -51.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kln2b")

[node name="X_button" type="Button" parent="TaskD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = 586.0
offset_right = -41.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "X"

[node name="Focus" type="Button" parent="TaskD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = 12.0
offset_right = -41.0
offset_bottom = -590.0
grow_horizontal = 2
grow_vertical = 2
text = "Focus"

[node name="TaskN" type="Label" parent="TaskD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 77.0
offset_top = 106.0
offset_right = -82.0
offset_bottom = -488.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescLabel" type="Label" parent="TaskD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 57.0
offset_top = 217.0
offset_right = -60.0
offset_bottom = -241.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="TaskDescription" type="Label" parent="TaskD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 53.0
offset_top = 164.0
offset_right = -126.0
offset_bottom = -418.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "Description:"
vertical_alignment = 1

[connection signal="item_clicked" from="VBoxContainer/ScrollContainer/VBoxContainer/DueList" to="." method="_on_due_list_item_clicked"]
[connection signal="item_clicked" from="VBoxContainer/ScrollContainer/VBoxContainer/CompleteList" to="." method="_on_complete_list_item_clicked"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddTask" to="." method="_on_add_clicked"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Shop" to="." method="_on_shop_clicked"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stats" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="TaskD/X_button" to="." method="_on_x_button_pressed"]
[connection signal="pressed" from="TaskD/Focus" to="." method="_on_focus_pressed"]
[connection signal="pressed" from="TaskD/Focus" to="." method="_on_x_button_pressed"]
